sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/home-assistant/service-matter-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: matter-server
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: matter-server
    app.kubernetes.io/instance: matter-server
spec:
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ports:
    - name: websocket
      port: 5580
      targetPort: 5580
      protocol: TCP
  selector:
    app.kubernetes.io/name: matter-server
    app.kubernetes.io/instance: matter-server
