sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/home-assistant/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: home-assistant
  ingress:
    # Allow traffic from Traefik Private
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-private
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8123"
              protocol: TCP
            - port: "8080"
              protocol: TCP
    # Allow traffic to Matter Server WebSocket from within home-assistant namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-assistant
      toPorts:
        - ports:
            - port: "5580"
              protocol: TCP
  egress:
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # Allow egress to Matter Server (matterjs-server)
    - toCIDR:
        - 192.168.78.88/32
      toPorts:
        - ports:
            - port: "5580"
              protocol: TCP
    # Allow egress to Frigate API
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: frigate
            app.kubernetes.io/name: frigate
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
    # Allow egress to Mosquitto MQTT
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: mosquitto
            app.kubernetes.io/name: mosquitto
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
    # Allow egress to IOT_INTERNET devices
    - toCIDR:
        - 192.168.78.0/25
      toPorts:
        - ports:
            - port: "9005"
              protocol: TCP
            - port: "80"
              protocol: TCP
            - port: "8443"
              protocol: TCP
    # Allow egress to ESPHome devices
    - toCIDR:
        - 192.168.78.0/25   # IOT_INTERNET
        - 192.168.78.128/25 # IOT_RESTRICTED
      toPorts:
        - ports:
            - port: "6053"
              protocol: TCP
    # Allow egress to Matter devices
    - toCIDR:
        - 192.168.78.0/25   # IOT_INTERNET
        - 192.168.78.128/25 # IOT_RESTRICTED
      toPorts:
        - ports:
            - port: "5540"
              protocol: TCP

    # Allow egress to Home Assistant Cloud/Visual assets
    - toFQDNs:
        - matchName: "brands.home-assistant.io"
        - matchName: "version.home-assistant.io"
        - matchName: "checkip.home-assistant.io"
        - matchName: "alerts.home-assistant.io"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # AWS access for Emerald
    - toFQDNs:
        - matchName: "cognito-identity.ap-southeast-2.amazonaws.com"
        - matchName: "a13v32g67itvz9-ats.iot.ap-southeast-2.amazonaws.com"
        - matchName: "api.emerald-ems.com.au"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow egress to PyPI for package installation (e.g. emerald-hws)
    - toFQDNs:
        - matchName: "pypi.org"
        - matchPattern: "*.pythonhosted.org"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow egress to GitHub API
    - toFQDNs:
        - matchName: "github.com"
        - matchName: "api.github.com"
        - matchName: "codeload.github.com"
        - matchName: "raw.githubusercontent.com"
        - matchName: "objects.githubusercontent.com"
        - matchName: "data-v2.hacs.xyz"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow egress to Weather Services
    - toFQDNs:
        - matchPattern: "*.api.met.no"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow egress to Radio Services
    - toFQDNs:
        - matchPattern: "*.api.radio-browser.info"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow egress to Mobile Push Notifications
    - toFQDNs:
        - matchName: "fcm.googleapis.com"
        - matchName: "api.push.apple.com"
        - matchName: "mobile-apps.home-assistant.io"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow egress to Solis Cloud
    - toFQDNs:
        - matchName: "www.soliscloud.com"
      toPorts:
        - ports:
            - port: "13333"
              protocol: TCP
    # Allow egress to Meross Smart Plugs
    - toFQDNs:
        - matchName: "iotx-ap.meross.com"
        - matchName: "mqtt-ap-v2.meross.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
